--- a/Pipfile
+++ b/Pipfile
@@ -10,9 +10,10 @@ rope = "*"
 
 [packages]
 flask = "*"
+picamera = "*"
 
 [requires]
-python_version = "3.8"
+python_version = "3.7"
 
 [pipenv]
 allow_prereleases = true
