--- a/Pipfile
+++ b/Pipfile
@@ -3,6 +3,11 @@ name = "pypi"
 url = "https://mirrors.aliyun.com/pypi/simple"
 verify_ssl = true
 
+[[source]]
+name = "piwheels"
+url = "https://www.piwheels.org/simple"
+verify_ssl = true
+
 [dev-packages]
 pylint = "*"
 black = "*"
@@ -11,6 +16,8 @@ rope = "*"
 [packages]
 flask = "*"
 picamera = "*"
+pillow = "*"
+opencv-python = "*"
 
 [requires]
 python_version = "3.7"
